--- a/css/message.css
+++ b/css/message.css
@@ -14,6 +14,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  overflow: hidden; 
+  touch-action: none;
+  min-height: 100svh;
 }
 
 .console {
@@ -471,4 +474,5 @@ body {
   .signature {
     font-size: 7px;
   }
+
 }
