--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  overflow: hidden; 
+  touch-action: none;
+  min-height: 100svh;
 }
 
 .console {
@@ -404,4 +407,5 @@ body {
     font-size: 10px;
     padding: 15px 8px;
   }
+
 }
