--- a/css/tetris.css
+++ b/css/tetris.css
@@ -14,6 +14,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  overflow: hidden; 
+  touch-action: none;
+  min-height: 100svh;
 }
 
 .console {
@@ -571,4 +574,5 @@ body {
     width: 150px;
     height: 210px;
   }
+
 }
