--- a/css/tetris.css
+++ b/css/tetris.css
@@ -574,4 +574,29 @@ body {
     width: 150px;
     height: 210px;
   }
+
+   /* Perbesar area D-Pad */
+  .dpad-container {
+    width: 160px;
+    height: 160px;
+  }
+
+  .dpad {
+    width: 130px;
+    height: 130px;
+    gap: 4px;
+  }
+
+  /* Tombol arah */
+  .dpad-btn {
+    box-shadow: 
+      0 4px 0 #1a1d24,
+      inset 0 1px 3px rgba(255,255,255,0.15);
+  }
+
+  /* Panah lebih besar */
+  .dpad-arrow {
+    font-size: 18px;
+  }
 }
+
