--- a/css/tetris.css
+++ b/css/tetris.css
@@ -16,6 +16,7 @@ body {
   padding: 20px;
   overflow: hidden; 
   touch-action: none;
+  min-height: 100svh;
 }
 
 .console {
@@ -598,5 +599,6 @@ body {
     font-size: 18px;
   }
 }
+
 
 
