--- a/css/gallery.css
+++ b/css/gallery.css
@@ -499,51 +499,45 @@ body {
 
 /* Responsive */
 @media (max-width: 480px) {
+
   body {
-    padding: 10;
+    padding: 10px;
   }
 
   .console {
     max-width: calc(100vw - 20px);
     width: calc(100% - 20px);
-    max-height: calc(100vh - 20px);
-    max-height: calc(100dvh - 20px);
     padding: 15px;
     border-radius: 20px 20px 30px 30px;
   }
 
+  /* ⬇️ SAMAKAN DENGAN PC */
   .screen {
     height: 380px;
   }
 
   .polaroid-container {
-    height: 190px;
+    height: 280px;
   }
 
   .polaroid {
-    max-width: 160px;
-    padding: 8px;
-    padding-bottom: 35px;
+    width: 210px;
+    padding: 10px 10px 18px;
   }
 
   .polaroid-photo {
-    width: 144px;
-    height: 120px;
+    width: 186px;
+    height: 160px;
   }
 
   .polaroid-caption {
-    font-size: 9px;
-    padding: 6px 5px 0;
+    font-size: 10px;
   }
 
+  /* kontrol boleh sedikit diperkecil */
   .dpad-container {
     width: 90px;
     height: 90px;
-  }
-
-  .dpad {
-    width: 70px;
-    height: 70px;
   }
 
   .ab-btn {
@@ -557,7 +551,6 @@ body {
     padding: 10px 6px;
   }
 }
-
 
 .dots {
   display: flex;
