--- a/css/gallery.css
+++ b/css/gallery.css
@@ -505,10 +505,11 @@ body {
   }
 
   .console {
-    max-width: calc(100vw - 20px);
-    width: calc(100% - 20px);
-    padding: 15px;
-    border-radius: 20px 20px 30px 30px;
+    height: 95dvh;        /* ⬅️ INI KUNCINYA */
+    max-height: 95dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   /* ⬇️ SAMAKAN DENGAN PC */
@@ -574,3 +575,4 @@ body {
   opacity: 1;
   box-shadow: 0 0 6px #4eff7a;
 }
+
